Update 003 multi-layer NN

--- a/20170425/example_codes/003_Multi_layer_NN.ipynb
+++ b/20170425/example_codes/003_Multi_layer_NN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -14,6 +14,7 @@
     "\n",
     "import math\n",
     "import random\n",
+    "from PIL import Image\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt"
@@ -56,13 +57,58 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Layer Fuctions\n",
+    "  - Linear layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def linearLayer(inp, inp_dim, out_dim, with_relu=False, \\\n",
+    "                with_dropout=False, use_contribute=False, prefix='hidden'):\n",
+    "    \"\"\" Linear layer\n",
+    "    Args:\n",
+    "        inp: input data, [batch_size, inp_dim]\n",
+    "        inp_dim: input dimension\n",
+    "        out_dim: output dimension\n",
+    "    Returns:\n",
+    "        out: Output tensor with the computed logits, [batch_size, out_dim]\n",
+    "             return (inp * weight + bias)\n",
+    "    \"\"\"\n",
+    "    print '%s: %d-dim ->%d-dim (relu: %s, dropout: %s, contribute:%s)' \\\n",
+    "            % (prefix, inp_dim, out_dim, with_relu, with_dropout, use_contribute)\n",
+    "    \n",
+    "    with tf.name_scope(prefix):\n",
+    "        if not use_contribute :\n",
+    "            weight = tf.Variable(TODO_FillHere, name='weights')\n",
+    "            bias = tf.Variable(tf.zeros([out_dim]), name='biases')\n",
+    "            out = tf.matmul(inp, weight) + bias\n",
+    "            \n",
+    "            if with_relu : TODO = True\n",
+    "            if with_dropout : TODO = True\n",
+    "                \n",
+    "        else :\n",
+    "            if with_dropout : TODO = True\n",
+    "            else : TODO = True\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
     "### Model Construction Functions\n",
-    " - Network (3-hidden-layer softmax regression)\n",
+    " - Network (3-layer NN)\n",
     "     - $h_1 = W_1^Tx+b_1$  (hidden dimension=128)\n",
     "     - $h_2= W_2^Th_1+b_2$ (hidden dimension=32)\n",
     "     - $h_3= W_3^Th_2+b_3$ (hidden dimension=number of label=10)\n",
@@ -84,28 +130,6 @@
    },
    "outputs": [],
    "source": [
-    "# Functions of layer definition\n",
-    "def linearLayer(inp, inp_dim, out_dim, with_relu=False, prefix='hidden'):\n",
-    "    \"\"\" Linear layer\n",
-    "    Args:\n",
-    "        inp: input data, [batch_size, inp_dim]\n",
-    "        inp_dim: input dimension\n",
-    "        out_dim: output dimension\n",
-    "    Returns:\n",
-    "        out: Output tensor with the computed logits, [batch_size, out_dim]\n",
-    "             return (inp * weight + bias)\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    with tf.name_scope(prefix):\n",
-    "        weight = tf.Variable(tf.zeros([inp_dim, out_dim]), name='weights')\n",
-    "        bias = tf.Variable(tf.zeros([out_dim]),name='biases')\n",
-    "        \n",
-    "        out = tf.matmul(inp, weight) + bias\n",
-    "        if with_relu :\n",
-    "            TODO = True\n",
-    "    return out\n",
-    "\n",
-    "# Functions of model construction\n",
     "def buildInputHolders():\n",
     "    \"\"\" define placeholders for model inputs\n",
     "    Returns:\n",
@@ -127,11 +151,9 @@
     "        pred: Output tensor with the computed logits.\n",
     "    \"\"\"\n",
     "    # Hidden 1\n",
-    "    hidden1 = linearLayer(images, img_dim, hidden1_units, \\\n",
-    "                          with_relu=True, prefix='hidden1')\n",
+    "    hidden1 = linearLayer(images, img_dim, hidden1_units, prefix='hidden1')\n",
     "    # Hidden 2\n",
-    "    hidden2 = linearLayer(hidden1, hidden1_units, \\\n",
-    "                          hidden2_units, with_relu=True, prefix='hidden2')\n",
+    "    hidden2 = linearLayer(hidden1, hidden1_units,hidden2_units, prefix='hidden2')\n",
     "    # Linear\n",
     "    pred = linearLayer(hidden2, hidden2_units, \\\n",
     "                       label_num, with_relu=False, prefix='linear')\n",
@@ -264,32 +286,106 @@
     "                                   feed_dict={imgs: batch_xs, labels: batch_ys})\n",
     "            total_cost += cost_val\n",
     "\n",
-    "        print( \"Epoch:\", \"%04d\" % (epoch + 1), \\\n",
-    "            \"Avg. cost =\", '{:.3f}'.format(total_cost / total_batch))\n",
+    "        print \"Epoch:\", \"%02d\" % (epoch + 1), \\\n",
+    "            \"Avg. cost =\", '{:.3f}'.format(total_cost / total_batch)\n",
     "\n",
     "    # 테스트 데이터에 대한 정확도\n",
-    "    print(\"Test Accuracy: \", sess.run(acc, \\\n",
-    "                    feed_dict={imgs: mnist.test.images, labels: mnist.test.labels}))"
+    "    print \"Test Accuracy: \", sess.run(acc, \\\n",
+    "                    feed_dict={imgs: mnist.test.images, labels: mnist.test.labels})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Note! 딥 러닝 모델의 성능이 오르는 데 크게 기여한 방법들\n",
+    "  - Activation function\n",
+    "    - ReLu\n",
+    "      - $f(x) = max(0,x)$\n",
+    "      - Non linearlity 함수\n",
+    "      - tf.nn.relu(features)를 이용하여 간단하게 구현 가능\n",
+    "          - features: relu를 적용 할 tensor\n",
+    "      - https://www.tensorflow.org/api_docs/python/tf/nn/relu\n",
+    "      - <img src=\"../resource/relu.png\" width=\"250\" height=\"250\">\n",
+    "  - Regularization\n",
+    "    - Dropout\n",
+    "      - 데이터에서 임의의 값들을 0으로 대체 (모델의 overfitting을 완화)\n",
+    "      - tf.nn.dropout(x, keep_prob)를 이용하여 간단하게 구현 가능\n",
+    "          - x: dropout를 적용 할 tensor\n",
+    "          - keep_prob: 데이터를 유지 할 확률 (1: 모든 데이터 유지, 0: 모든 데이터를 0으로)\n",
+    "      - https://www.tensorflow.org/api_docs/python/tf/nn/dropout\n",
+    "      - <img src=\"../resource/dropout.png\" width=\"400\" height=\"300\">\n",
+    "    - Others\n",
+    "      - L1 regularization\n",
+    "      - L2 regularization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ReLu 예제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = tf.placeholder(tf.float32, shape=(1,10))\n",
+    "relu_x = tf.nn.relu(x)\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    inp = np.random.randn(1,10)\n",
+    "    print \"input x:\\n\", inp\n",
+    "    print \"relu_x:\\n\", sess.run(relu_x, {x:inp})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dropout 예제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = tf.placeholder(tf.float32, shape=(1,10))\n",
+    "dropout_x = tf.nn.dropout(x, 0.5)\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    inp = np.random.randn(1,10)\n",
+    "    print \"input x:\\n\", inp\n",
+    "    print \"dropout_x:\\n\", sess.run(dropout_x, {x:inp})"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
