--- a/20170425/solution/001 Tensorflow Introduction.ipynb
+++ b/20170425/solution/001 Tensorflow Introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -10,15 +10,12 @@
    },
    "outputs": [],
    "source": [
-    "#-*- coding: utf-8 -*-\n",
     "%matplotlib inline\n",
     "\n",
     "import random\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "import matplotlib.pyplot as plt\n",
-    "import sys\n",
-    "\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -75,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -103,7 +100,8 @@
     "node1 = tf.placeholder(tf.float32)\n",
     "\n",
     "# TODO: 세제곱수 계산\n",
-    "node2 = tf.pow(node1, 3)\n",
+    "#node2 = tf.pow(node1, 3)\n",
+    "node2 = tf.pow(node1, [[3,3],[3,3]])\n",
     "\n",
     "# TODO: 제곱근 계산\n",
     "node3 = tf.sqrt(node1)\n",
@@ -140,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -158,8 +156,8 @@
       "[[3 4]\n",
       " [5 6]]\n",
       "A * B: \n",
-      "[array([[  3.,   8.],\n",
-      "       [ 15.,  24.]], dtype=float32)]\n"
+      "[[  3.   8.]\n",
+      " [ 15.  24.]]\n"
      ]
     }
    ],
@@ -182,7 +180,7 @@
     "    sess.run(init)\n",
     "    \n",
     "    res1 = sess.run([node3], {node1:inp, node2:inp2})\n",
-    "    print \"A * B: \\n\", res1"
+    "    print \"A * B: \\n\", res1[0]"
    ]
   },
   {
@@ -216,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -234,8 +232,8 @@
       "[[3 4]\n",
       " [5 6]]\n",
       "A * B: \n",
-      "[array([[ 13.,  16.],\n",
-      "       [ 29.,  36.]], dtype=float32)]\n"
+      "[[ 13.  16.]\n",
+      " [ 29.  36.]]\n"
      ]
     }
    ],
@@ -258,7 +256,7 @@
     "    sess.run(init)\n",
     "    \n",
     "    res1 = sess.run([node3], {node1:inp, node2:inp2})\n",
-    "    print \"A * B: \\n\", res1"
+    "    print \"A * B: \\n\", res1[0]"
    ]
   },
   {
@@ -284,13 +282,13 @@
     "    [1 2 3 4 5] <br>\n",
     "    [6 7 8 9 10] <br>\n",
     "  - output1 (모든 데이터에 대한 평균): 5.5 \n",
-    "  - output2 (각 행에 대한 평균): <br> [3.5, 4.5, 5.5, 6.5, 7.5] \n",
-    "  - output3 (각 열에 대한 평균):<br> [3] <br> [8] "
+    "  - output2 (각 열에 대한 평균): <br> [3.5, 4.5, 5.5, 6.5, 7.5] \n",
+    "  - output3 (각 행에 대한 평균):<br> [3] <br> [8] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -363,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -375,11 +373,11 @@
      "output_type": "stream",
      "text": [
       "softmax using tensorflow: \n",
-      "[[ 0.07368489  0.01020653  0.0179082   0.03143091  0.05218411  0.39887774\n",
-      "   0.02413732  0.10023066  0.07753238  0.21380734]]\n",
+      "[[ 0.05382827  0.20583585  0.03816106  0.03985499  0.05935575  0.01212444\n",
+      "   0.38550392  0.04705098  0.05414022  0.10414449]]\n",
       "softmax using numpy: \n",
-      "[[ 0.07368488  0.01020653  0.0179082   0.03143091  0.05218411  0.39887769\n",
-      "   0.02413731  0.10023065  0.07753238  0.21380733]]\n"
+      "[[ 0.05382827  0.20583585  0.03816107  0.03985499  0.05935575  0.01212444\n",
+      "   0.38550396  0.04705097  0.05414022  0.10414449]]\n"
      ]
     }
    ],
@@ -422,13 +420,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input prediction:\n",
+      "[[ 0.080191    1.61081035  0.94156168  0.68961542  0.03653529  1.545655\n",
+      "   1.15359627  0.43750849  0.43603079  0.14822681]]\n",
+      "label:\n",
+      "[ 0.  0.  0.  0.  1.  0.  0.  0.  0.  0.] \n",
+      "\n",
+      "L1 loss using tensorflow: \n",
+      "2.66212\n",
+      "L1 loss using numpy: \n",
+      "2.66211771965\n"
+     ]
+    }
+   ],
    "source": [
     "# define ground-truth label\n",
     "x = tf.placeholder(tf.float32)\n",
@@ -439,7 +454,23 @@
     "linear_model = W * x + b # f(x)\n",
     "\n",
     "# TODO: define L1 loss\n",
-    "l1_loss = tf.reduce_sum(tf.abs(tf.subtract(true_label, linear_model)))"
+    "l1_loss = tf.reduce_sum(tf.abs(tf.subtract(true_label, linear_model)))\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    inp = np.abs(np.random.randn(1,10))\n",
+    "    label = np.zeros(10)\n",
+    "    label[np.random.randint(10)] = 1.0\n",
+    "    print \"input prediction:\\n\", inp \n",
+    "    print \"label:\\n\", label, \"\\n\" \n",
+    "    \n",
+    "    out = sess.run([l1_loss, linear_model], {x:inp, true_label:label})\n",
+    "    \n",
+    "    print \"L1 loss using tensorflow: \\n\", out[0] \n",
+    "    print \"L1 loss using numpy: \\n\", np.sum(np.abs(label-out[1]))"
    ]
   },
   {
@@ -452,31 +483,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'labels' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-79aa3cb860ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcross_entropy_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduce_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduction_indices\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'labels' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "cross_entropy_loss = -tf.reduce_sum(labels * tf.log(preds), reduction_indices=[1])"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -493,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -505,15 +511,15 @@
      "output_type": "stream",
      "text": [
       "input prediction:\n",
-      "[[ 0.57076103  1.205196    0.35827189  1.15277773  0.29856302  0.46777165\n",
-      "   1.15574465  0.90157554  0.30039495  0.30863809]]\n",
+      "[[ 0.28398022  0.42510187  1.57257701  0.79273032  2.09448331  0.73494555\n",
+      "   0.61164825  1.27409994  0.50261088  0.29349688]]\n",
       "label:\n",
-      "[ 0.  0.  0.  0.  0.  0.  0.  0.  1.  0.] \n",
+      "[ 0.  0.  0.  0.  1.  0.  0.  0.  0.  0.] \n",
       "\n",
-      "cross_entropy loss tensorflow: \n",
-      "[ 1.20265722]\n",
+      "cross_entropy loss using tensorflow: \n",
+      "[-0.73930693]\n",
       "cross_entropy loss using numpy: \n",
-      "[ 1.20265717]\n"
+      "[-0.73930689]\n"
      ]
     }
    ],
@@ -531,7 +537,7 @@
     "    print \"input prediction:\\n\", inp \n",
     "    print \"label:\\n\", label, \"\\n\" \n",
     "    \n",
-    "    print \"cross_entropy loss tensorflow: \\n\", sess.run(loss, {node1:inp, node2:label})\n",
+    "    print \"cross_entropy loss using tensorflow: \\n\", sess.run(loss, {node1:inp, node2:label})\n",
     "    print \"cross_entropy loss using numpy: \\n\", -np.sum(label*np.log(inp), 1)"
    ]
   },
@@ -548,9 +554,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
