--- a/20170425/practice/003_Multi_layer_NN.ipynb
+++ b/20170425/practice/003_Multi_layer_NN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -26,25 +26,34 @@
     "editable": true
    },
    "source": [
-    "### Problem 1\n",
-    "  - linear 레이어의 weight를 normal distribution으로 초기화 하도록 구현\n",
+    "## example code에서 성능이 낮았던 multi-layer NN의 성능을 올려봅시다.\n",
+    "### Problem 1. 파라미터 초기화의 중요성 확인\n",
+    "  - all zero 초기화는 좋은 weight 초기화 방법이 아닙니다.\n",
+    "  - linear layer의 weight를 normal distribution으로 초기화 하도록 구현\n",
     "      - hint: \"normal\"을 tensorflow 홈페이지에서 검색\n",
+    "      - mean은 0으로, stv는 0.1로 설정\n",
     "  - 약 92% accuracy를 가지도록 learning rate 찾기\n",
     "  \n",
-    "### Problem 2\n",
-    "  - relu 레이어 구현\n",
-    "      - $f(x)=x~$ (if $x\\ge0$) and $f(x)=0~$ (if $x<0$)\n",
-    "      - hint: \"relu\"을 tensorflow 홈페이지에서 검색\n",
-    "  - 약 98% accuracy를 가지도록 파라미터 찾기\n",
+    "### Problem 2. Activation function의 중요성 확인\n",
+    "  - linearLayer 함수에서 linear layer의 결과 값에 ReLu 적용\n",
+    "  - linearLayer 함수에서 with_relu=True로 설정\n",
+    "  - 약 97% accuracy를 가짐\n",
     "\n",
-    "### Problem 3\n",
-    "  - tensorflow.contrib.layers 유틸리티 사용해보기\n",
-    "  - use_contribute=True로 바꾼 후, linearLayer 함수를 tensorflow.contrib.layers에 있는 함수로 구현\n",
-    "      - https://www.tensorflow.org/api_guides/python/contrib.layers      \n",
+    "### Problem 3. Dropout 적용\n",
+    "  - linearLayer 함수에서 linear layer의 결과 값 (혹은 Relu를 적용한 값)에 dropout 적용\n",
+    "  - keep_prob은 0.8로 적용\n",
+    "  - linearLayer 함수에서 with_dropout=True로 설정\n",
+    "  - 약 97% accuracy를 가짐 (relu만 적용했을때보다 약간 성능이 떨어짐)\n",
     "\n",
-    "### Problem 4\n",
-    "  - hidden 레이어를 하나 더 추가하고, 성능이 나오는 파라미터를 찾기\n",
-    "  - 마지막에 Linear layer (10dim -> 10dim) 추가\n"
+    "### Problem 4. \n",
+    "  - 자주 쓰이는 layer는 이미 구현되어 제공됩니다. 제공되는 함수를 이용하여 모델을 정의해봅시다.\n",
+    "  - linearLayer 함수의 인풋 파라미터 use_contribute를 True로 바꾼 후, linearLayer 함수의 역할을 하는 레이어를 아래 링크에서 찾아서 적용해봅시다.\n",
+    "      - https://www.tensorflow.org/api_guides/python/contrib.layers\n",
+    "  - linearLayer 함수에서 use_contribute=True로 설정\n",
+    "\n",
+    "### Problem 5. 더 deep한 NN을 만들어 봅시다.\n",
+    "  - 4-layer NN을 구현하고, 성능이 나오는 파라미터 (hidden layer의 dimension들, learning rate)를 찾기\n",
+    "  - note: buildModel 함수의 buildInference 함수 호출하는 부분도 수정 필요\n"
    ]
   },
   {
@@ -84,6 +93,61 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Layer Fuctions\n",
+    "  - Linear layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def linearLayer(inp, inp_dim, out_dim, with_relu=False, \\\n",
+    "                with_dropout=False, prefix='hidden', use_contribute=False):\n",
+    "    \"\"\" Linear layer\n",
+    "    Args:\n",
+    "        inp: input data, [batch_size, inp_dim]\n",
+    "        inp_dim: input dimension\n",
+    "        out_dim: output dimension\n",
+    "    Returns:\n",
+    "        out: Output tensor with the computed logits, [batch_size, out_dim]\n",
+    "             return (inp * weight + bias)\n",
+    "    \"\"\"\n",
+    "    print '%s: %d-dim ->%d-dim (relu: %s, dropout: %s, contribute:%s)' \\\n",
+    "            % (prefix, inp_dim, out_dim, with_relu, with_dropout, use_contribute)\n",
+    "    \n",
+    "    with tf.name_scope(prefix):\n",
+    "        if not use_contribute :\n",
+    "            \"\"\" Problem 1\n",
+    "            TODO: initializing weight using normal distribution, mean (1.0) and std (0.1) \n",
+    "            \"\"\"\n",
+    "            weight = tf.Variable(TODO_FillHere, name='weights') # TODO\n",
+    "            bias = tf.Variable(tf.zeros([out_dim]), name='biases')\n",
+    "            out = tf.matmul(inp, weight) + bias\n",
+    "            \n",
+    "            if with_relu : \n",
+    "                \"\"\" Problem 2\n",
+    "                TODO: Apply relu operation\n",
+    "                \"\"\"\n",
+    "            if with_dropout :\n",
+    "                \"\"\" Problem 3\n",
+    "                TODO: Apply dropout operation\n",
+    "                \"\"\"\n",
+    "                \n",
+    "        else :\n",
+    "            \"\"\" Problem 4\n",
+    "            TODO: Using tf.contrib.layers utility\n",
+    "            \"\"\"\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -102,41 +166,6 @@
    },
    "outputs": [],
    "source": [
-    "# Functions of layer definition\n",
-    "def linearLayer(inp, inp_dim, out_dim, with_relu=False, \\\n",
-    "                prefix='hidden', use_contribute=False):\n",
-    "    \"\"\" Linear layer\n",
-    "    Args:\n",
-    "        inp: input data, [batch_size, inp_dim]\n",
-    "        inp_dim: input dimension\n",
-    "        out_dim: output dimension\n",
-    "    Returns:\n",
-    "        out: Output tensor with the computed logits, [batch_size, out_dim]\n",
-    "             return (inp * weight + bias)\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    with tf.name_scope(prefix):\n",
-    "        if not use_contribute :\n",
-    "            \"\"\" Problem 1\n",
-    "            TODO: initializing weight using normal distribution, mean (1.0) and std (0.1) \n",
-    "            \"\"\"\n",
-    "            weight = tf.Variable(TODO_FillHere,name='weights')\n",
-    "            bias = tf.Variable(tf.zeros([out_dim]),name='biases')\n",
-    "\n",
-    "            out = tf.matmul(inp, weight) + bias\n",
-    "            if with_relu : \n",
-    "                \"\"\" Problem 2\n",
-    "                TODO: Implement relu operation\n",
-    "                \"\"\"\n",
-    "                out = tf.nn.relu(out)\n",
-    "        else :\n",
-    "            \"\"\" Problem 3\n",
-    "            TODO: Using tf.contrib.layers utility\n",
-    "            \"\"\"\n",
-    "            TODO = True\n",
-    "    return out\n",
-    "\n",
-    "# Functions of model construction\n",
     "def buildInputHolders():\n",
     "    \"\"\" define placeholders for model inputs\n",
     "    Returns:\n",
@@ -148,9 +177,7 @@
     "    \n",
     "    return img_holder, label_holder\n",
     "\n",
-    "\"\"\" Problem 4\n",
-    "TODO: adding additional linear layer\n",
-    "\"\"\"\n",
+    "\n",
     "def buildInference(images, img_dim, label_num, hidden1_units, hidden2_units):\n",
     "    \"\"\"Build the MNIST model up to where it may be used for inference.\n",
     "    Args:\n",
@@ -161,15 +188,18 @@
     "        pred: Output tensor with the computed logits.\n",
     "    \"\"\"\n",
     "    # Hidden 1\n",
-    "    hidden1 = linearLayer(images, img_dim, hidden1_units, \\\n",
-    "                          with_relu=True, prefix='hidden1')\n",
+    "    hidden1 = linearLayer(images, img_dim, hidden1_units, prefix='hidden1')\n",
     "    # Hidden 2\n",
-    "    hidden2 = linearLayer(hidden1, hidden1_units, \\\n",
-    "                          hidden2_units, with_relu=True, prefix='hidden2')\n",
+    "    hidden2 = linearLayer(hidden1, hidden1_units,hidden2_units, prefix='hidden2')\n",
     "    \n",
+    "    \"\"\" Problem 5\n",
+    "        TODO: adding additional linear layer\n",
+    "    \"\"\"\n",
     "    # Linear\n",
+    "    # 마지막 레이블에 대한 확률값을 예측하는 layer에서는 relu와 dropout을 적용하지 않습니다.\n",
     "    pred = linearLayer(hidden2, hidden2_units, \\\n",
-    "                       label_num, with_relu=False, prefix='linear')\n",
+    "                       label_num, with_relu=False, \\\n",
+    "                       with_dropout=False, prefix='linear')\n",
     "    \n",
     "    return tf.nn.softmax(pred)\n",
     "\n",
@@ -212,7 +242,7 @@
     "        acc : accuracy\n",
     "    \"\"\"\n",
     "    imgs, labels = buildInputHolders()\n",
-    "    preds = buildInference(imgs, 28*28, 10, 128, 32)\n",
+    "    preds = buildInference(imgs, 28*28, 10, 128, 32) # for Problem 5, should be changed\n",
     "    loss = buildLoss(preds, labels)\n",
     "    acc = buildAccuracy(preds, labels)\n",
     "    \n",
@@ -230,7 +260,8 @@
     "editable": true
    },
    "source": [
-    "### Main Function"
+    "### Main Function\n",
+    "  - 각 문제를 푼 후 아래 두 셀을 실행하세요."
    ]
   },
   {
@@ -297,32 +328,32 @@
     "                                   feed_dict={imgs: batch_xs, labels: batch_ys})\n",
     "            total_cost += cost_val\n",
     "\n",
-    "        print( \"Epoch:\", \"%04d\" % (epoch + 1), \\\n",
-    "            \"Avg. cost =\", '{:.3f}'.format(total_cost / total_batch))\n",
+    "        print \"Epoch:\", \"%04d\" % (epoch + 1), \\\n",
+    "            \"Avg. cost =\", '{:.3f}'.format(total_cost / total_batch)\n",
     "\n",
     "    # 테스트 데이터에 대한 정확도\n",
-    "    print(\"Test Accuracy: \", sess.run(acc, \\\n",
-    "                    feed_dict={imgs: mnist.test.images, labels: mnist.test.labels}))"
+    "    print \"Test Accuracy: \", sess.run(acc, \\\n",
+    "                    feed_dict={imgs: mnist.test.images, labels: mnist.test.labels})"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
