--- a/week_1/practice/003_Multi_layer_NN.ipynb
+++ b/week_1/practice/003_Multi_layer_NN.ipynb
@@ -123,26 +123,26 @@
     "    \n",
     "    with tf.name_scope(prefix):\n",
     "        if not use_contribute :\n",
-    "            \"\"\" Problem 1\n",
-    "            TODO: initializing weight using normal distribution, mean (1.0) and std (0.1) \n",
-    "            \"\"\"\n",
+    "            # Problem 1\n",
+    "            # TODO: initializing weight using normal distribution, mean (1.0) and std (0.1) \n",
+    "            \n",
     "            weight = tf.Variable(TODO_FillHere, name='weights') # TODO\n",
     "            bias = tf.Variable(tf.zeros([out_dim]), name='biases')\n",
     "            out = tf.matmul(inp, weight) + bias\n",
     "            \n",
     "            if with_relu : \n",
-    "                \"\"\" Problem 2\n",
-    "                TODO: Apply relu operation\n",
-    "                \"\"\"\n",
+    "                # Problem 2\n",
+    "                # TODO: Apply relu operation\n",
+    "                \n",
     "            if with_dropout :\n",
-    "                \"\"\" Problem 3\n",
-    "                TODO: Apply dropout operation\n",
-    "                \"\"\"\n",
+    "                # Problem 3\n",
+    "                # TODO: Apply dropout operation\n",
+    "                \n",
     "                \n",
     "        else :\n",
-    "            \"\"\" Problem 4\n",
-    "            TODO: Using tf.contrib.layers utility\n",
-    "            \"\"\"\n",
+    "            # Problem 4\n",
+    "            # TODO: Using tf.contrib.layers utility\n",
+    "            \n",
     "    return out"
    ]
   },
@@ -192,9 +192,9 @@
     "    # Hidden 2\n",
     "    hidden2 = linearLayer(hidden1, hidden1_units,hidden2_units, prefix='hidden2')\n",
     "    \n",
-    "    \"\"\" Problem 5\n",
-    "        TODO: adding additional linear layer\n",
-    "    \"\"\"\n",
+    "    # Problem 5\n",
+    "    # TODO: adding additional linear layer\n",
+    "    \n",
     "    # Linear\n",
     "    # 마지막 레이블에 대한 확률값을 예측하는 layer에서는 relu와 dropout을 적용하지 않습니다.\n",
     "    pred = linearLayer(hidden2, hidden2_units, \\\n",
@@ -338,8 +338,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
